--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install build tools
-      run: sudo apt-get install nasm
+      run: sudo apt-get install nasm grub-common
 
     - name: compile
       run: ./generate_sources.sh && make
